--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon/copper_jikky.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="ScJPMC Map" />
+    <meta property="og:image" content="/icon/copper_jikky.png" />
     <title>ScJPMC Map</title>
   </head>
   <body>
